# Employee_Payroll_System

./: .gitignore  CMakeLists.txt  README.md  dashboardwidget.cpp  dashboardwidget.h  dashboardwidget.ui  departmentwidget.cpp  departmentwidget.h  departmentwidget.ui  generatereport.cpp  generatereport.h  generatereport.ui  main.cpp  mainapp.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageemployeewidget.cpp  manageemployeewidget.h  manageemployeewidget.ui  manageemppayroll.cpp  manageemppayroll.h  manageemppayroll.ui  managepaygrade.cpp  managepaygrade.h  managepaygrade.ui  project_structure.py
UIcomponents/dashboard/: dashboardwidget.cpp  dashboardwidget.h  dashboardwidget.ui
UIcomponents/department/: departmentwidget.cpp  departmentwidget.h  departmentwidget.ui
UIcomponents/generateReport/: generatereport.cpp  generatereport.h  generatereport.ui
UIcomponents/manageEmpPayroll/: manageemppayroll.cpp  manageemppayroll.h
UIcomponents/manageEmployee/: manageemployeewidget.cpp  manageemployeewidget.h  manageemployeewidget.ui
UIcomponents/managePaygrade/: managepaygrade.cpp  managepaygrade.h
src/database/: Database.h
src/department/: Department.cpp  Department.h
src/employee/: Employee.cpp  Employee.h
src/pay_grade/: PayGrade.cpp  PayGrade.h
src/payroll/: Payroll.cpp  Payroll.h
src/user_authentication/: Login.cpp  Login.h
utils/: file_gen.py
